--- a/02-loops-functions.ipynb
+++ b/02-loops-functions.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
       "thing is  1\n",
       "thing is  2.5\n",
       "thing is  hello\n",
-      "thing is  <function add at 0x111570e18>\n"
+      "thing is  <function add at 0x10a6b3d90>\n"
      ]
     }
    ],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,275 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We see that to access individual entries we use square brackets and the number of the entry, starting from $0$. **All** Python tuples and lists start from $0$. To check that it cannot be modified:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-9e1f4de27f17>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "t1[0] = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use *slicing* to access many entries at once:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t1[1:4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As with the range function, the notation `<start>:<end>` returns the entries from (and including) `<start>` up to, but **not** including, `<end>`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use *negative* numbers to access from the right of the sequence: `-1` is the last entry, `-2` the next-to-last, and so on:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t1[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A list is a sequence with a size that can change, and whose entries can be modified:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "7\n",
+      "[0, 1, 2, 7, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [0, 1, 2, 3, 4, 5]\n",
+    "print(l1[3])\n",
+    "l1[3] = 7\n",
+    "print(l1[3])\n",
+    "l1.append(6)\n",
+    "print(l1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The same slicing notation can be used, and now can be used to assignment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 2, 7, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1[0:2] = l1[4:6]\n",
+    "print(l1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crucially, lists and tuples can contain *anything*. As with loops, there is no restriction on types, and things can be nested:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "l2 = [0, 1.2, \"hello\", [\"a\", 3, 4.5], (0, (1.1, 2.3, 4))]\n",
+    "print(l2[1])\n",
+    "print(l2[3][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both lists and tuples are *ordered*: there are accessed by an integer giving there location in the sequence. This doesn't always make sense. Consider an algorithm which depends on parameters $\\omega, \\Gamma, N$. We want to keep the parameters together, but there's no logical order to them. Instead we can use a dictionary, which is an unordered Python container:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1 = {\"omega\": 1.0, \"Gamma\": 5.7, \"N\": 100}\n",
+    "print(d1[\"Gamma\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As there is no order we access dictionaries using the *key*. To loop over a dictionary, we take advantage of Python's loose iteration rules:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key is omega value is 1.0\n",
+      "Key is Gamma value is 5.7\n",
+      "Key is N value is 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in d1:\n",
+    "    print(\"Key is\", key, \"value is\", d1[key])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a shortcut to allow you to get both key and value in one go:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key is omega value is 1.0\n",
+      "Key is Gamma value is 5.7\n",
+      "Key is N value is 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in d1.items():\n",
+    "    print(\"Key is\", key, \"value is\", value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do the bubble sort and counting sort exercise."
+   ]
   }
  ],
  "metadata": {
