Working simplex class

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -826,14 +826,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Constraint(object):\n",
-    "    def __init__(self, coefficients, gtlteq, value):\n",
+    "    def __init__(self, coefficients, value):\n",
     "        self.coefficients = numpy.array(coefficients)\n",
-    "        self.gtlteq = gtlteq\n",
     "        self.value = value\n",
     "        \n",
     "    def __repr__(self):\n",
@@ -841,66 +840,70 @@
     "        for i in range(len(self.coefficients)-1):\n",
     "            string += str(self.coefficients[i]) + \" x_{}\".format(i+1) + \" + \"\n",
     "        string += str(self.coefficients[-1]) + \" x_{}\".format(len(self.coefficients))\n",
-    "        string += \" \" + self.gtlteq + \" \"\n",
+    "        string += \" \\le \"\n",
     "        string += str(self.value)\n",
     "        return string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 x_1 + 1 x_2 le 4\n",
-      "1 x_1 + 2 x_2 le 3\n"
+      "2 x_1 + 1 x_2 \\le 4\n",
+      "1 x_1 + 2 x_2 \\le 3\n"
      ]
     }
    ],
    "source": [
-    "c1 = Constraint([2, 1], \"le\", 4)\n",
-    "c2 = Constraint([1, 2], \"le\", 3)\n",
+    "c1 = Constraint([2, 1], 4)\n",
+    "c2 = Constraint([1, 2], 3)\n",
     "print(c1)\n",
     "print(c2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Linearprog(object):\n",
     "    \n",
-    "    def __init__(self, objective):\n",
+    "    def __init__(self, objective, constraints):\n",
     "        self.objective = numpy.array(objective)\n",
-    "        self.constraints = []\n",
-    "        self.tableau = numpy.array([1.0])\n",
-    "        self.tableau = numpy.hstack((self.tableau, -self.objective))\n",
-    "        self.tableau = numpy.reshape(self.tableau, (1, len(self.tableau)))\n",
-    "        self.tableau_rhs = numpy.array([0.0])\n",
-    "        \n",
-    "    def add_constraint(self, constraint):\n",
-    "        self.constraints.append(constraint)\n",
-    "        print(self.tableau)\n",
-    "        print(numpy.zeros((self.tableau.shape[0], 1)))\n",
-    "        self.tableau = numpy.hstack((self.tableau, numpy.zeros((self.tableau.shape[0], 1))))\n",
-    "        new_row = numpy.zeros_like(self.tableau[0, :])\n",
-    "        row_number = self.tableau.shape[1]+1\n",
-    "        new_row[1:2+len(self.objective)] = constraint.coefficients\n",
-    "        if constraint.gtlteq == \"le\":\n",
-    "            new_row[row_number] = 1.0\n",
-    "        elif constraint.gtlteq == \"ge\":\n",
-    "            new_row[row_number] = -1.0\n",
-    "        # Anything else counts as \"=\"\n",
-    "        self.tableau = numpy.vstack((self.tableau, new_row))\n",
-    "        self.tableau_rhs = numpy.vstack((self.tableau_rhs, constraint.value))\n",
+    "        self.nvars = len(self.objective)\n",
+    "        self.constraints = constraints\n",
+    "        self.nconstraints = len(self.constraints)\n",
+    "        self.tableau = numpy.zeros((1+self.nconstraints, 2+self.nvars+self.nconstraints))\n",
+    "        self.tableau[0, 0] = 1.0\n",
+    "        self.tableau[0, 1:1+self.nvars] = -self.objective\n",
+    "        for nc, c in enumerate(self.constraints):\n",
+    "            self.tableau[1+nc, 1:1+self.nvars] = c.coefficients\n",
+    "            self.tableau[1+nc, 1+self.nvars+nc] = 1.0\n",
+    "            self.tableau[1+nc, -1] = c.value\n",
+    "        self.z, self.x = self.simplex()\n",
     "        \n",
     "    def simplex(self):\n",
-    "       pass\n",
+    "        for column in range(1, self.nvars+2):\n",
+    "            if self.tableau[0, column] < 0:\n",
+    "                pivot_row = numpy.argmin(numpy.abs(self.tableau[0, column] / self.tableau[1:, column])) + 1\n",
+    "                # Rescale pivot row\n",
+    "                self.tableau[pivot_row, :] /= self.tableau[pivot_row, column]\n",
+    "                # Remove all entries in columns except the pivot\n",
+    "                for row in range(0, pivot_row):\n",
+    "                    pivot = self.tableau[row, column] / self.tableau[pivot_row, column]\n",
+    "                    self.tableau[row, :] -= pivot * self.tableau[pivot_row, :]\n",
+    "                for row in range(pivot_row+1, self.tableau.shape[0]):\n",
+    "                    pivot = self.tableau[row, column] / self.tableau[pivot_row, column]\n",
+    "                    self.tableau[row, :] -= pivot * self.tableau[pivot_row, :]\n",
+    "        z = self.tableau[0, -1]\n",
+    "        x = self.tableau[1:self.nvars+1, -1]\n",
+    "        return z, x\n",
     "\n",
     "    def __repr__(self):\n",
     "        string = \"max \"\n",
@@ -908,41 +911,40 @@
     "            string += str(self.objective[i]) + \" x_{}\".format(i+1) + \" + \"\n",
     "        string += str(self.objective[-1]) + \" x_{}\".format(len(self.objective))\n",
     "        string += \"\\n\\nwith constraints\\n\"\n",
-    "        for c in constraints:\n",
+    "        for c in self.constraints:\n",
+    "            string += \"\\n\"\n",
     "            string += c.__repr__()\n",
+    "        string += \"\\n\\n\"\n",
+    "        string += \"Solution has objective function maximum of \" + str(self.z)\n",
+    "        string += \"\\n\\n\"\n",
+    "        string += \"at location x = \" + str(self.x)\n",
     "        return string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1. -1. -1.]]\n",
-      "[[ 0.]]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (2) into shape (3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-87-f9b5fa35408f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mproblem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearprog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mproblem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_constraint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mproblem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_constraint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproblem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-86-e19d40acf9ca>\u001b[0m in \u001b[0;36madd_constraint\u001b[0;34m(self, constraint)\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mnew_row\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtableau\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mrow_number\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtableau\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0mnew_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobjective\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconstraint\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoefficients\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mconstraint\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgtlteq\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"le\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m             \u001b[0mnew_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow_number\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (2) into shape (3)"
+      "max 1 x_1 + 1 x_2\n",
+      "\n",
+      "with constraints\n",
+      "\n",
+      "2 x_1 + 1 x_2 \\le 4\n",
+      "1 x_1 + 2 x_2 \\le 3\n",
+      "\n",
+      "Solution has objective function maximum of 2.33333333333\n",
+      "\n",
+      "at location x = [ 1.66666667  0.66666667]\n"
      ]
     }
    ],
    "source": [
-    "problem = Linearprog([1, 1])\n",
-    "problem.add_constraint(c1)\n",
-    "problem.add_constraint(c2)\n",
+    "problem = Linearprog([1, 1], [c1, c2])\n",
     "print(problem)"
    ]
   },
