Start on MC bit

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -709,15 +709,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Student object at 0x1180ef710>\n",
-      "<__main__.Student object at 0x1180ef630>\n"
+      "<__main__.Student object at 0x10bc522e8>\n",
+      "<__main__.Student object at 0x10bc52320>\n"
      ]
     }
    ],
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -826,8 +826,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Constraint(object):\n",
@@ -847,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -868,8 +870,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Linearprog(object):\n",
@@ -923,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -949,13 +953,140 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Monte Carlo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Monte Carlo algorithms take a model where the output depends on unknown input parameters and explore the possible results by providing suitable random data as input."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an example problem we'll take the [Unilink bus](http://www.unilinkbus.co.uk) service U1C from the Airport into the centre and ask: at busy times, how many people will not be able to get on the bus, and at what stops?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will only consider the main stops:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "bus_stops = [\"Airport Parkway Station\",\n",
+    "             \"Wessex Lane\",\n",
+    "             \"Highfield Interchange\",\n",
+    "             \"Portswood Broadway\",\n",
+    "             \"The Avenue Archers Road\",\n",
+    "             \"Civic Centre\",\n",
+    "             \"Central Station\",\n",
+    "             \"West Quay\",\n",
+    "             \"Town Quay\",\n",
+    "             \"NOCS\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will assume that the bus capacity is $85$ people, that $200$ people want to travel, that they are distributed at the $10$ stops following a discrete random distribution, and each wants to travel a number of stops that also follows a discrete random distribution (distributed between $1$ and the maximum number of stops they could travel)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are smarter ways of doing it than this, I'm sure:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "capacity = 85\n",
+    "n_people = 250\n",
+    "total_stops = len(bus_stops)\n",
+    "initial_stops = numpy.random.randint(0, total_stops-1, n_people)\n",
+    "n_stops = numpy.zeros_like(initial_stops)\n",
+    "n_onboard = numpy.zeros((total_stops,), dtype=numpy.int)\n",
+    "for i in range(total_stops):\n",
+    "    if i == total_stops - 1: # Can only take one stop\n",
+    "        n_stops[initial_stops == i] = 1\n",
+    "    else:\n",
+    "        n_people_at_stop = len(initial_stops[initial_stops == i])\n",
+    "        n_stops[initial_stops == i] = numpy.random.randint(1, total_stops-i, n_people_at_stop)\n",
+    "n_left_behind = 0\n",
+    "for i in range(total_stops):\n",
+    "    n_people_at_stop = len(initial_stops[initial_stops == i])\n",
+    "    n_people_getting_on = max([0, min([n_people_at_stop, capacity - n_onboard[i]])])\n",
+    "    n_left_behind += max([n_people_at_stop - n_people_getting_on, 0])\n",
+    "    for fill_stops in n_stops[initial_stops == i][:n_people_getting_on]:\n",
+    "        n_onboard[i:i+fill_stops] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n_left_behind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[35 56 76 85 85 85 85 85 67  0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n_onboard)"
+   ]
   }
  ],
  "metadata": {
