Add pulp to examples

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -680,7 +680,7 @@
     }
    ],
    "source": [
-    "s1 = Student(\"Ian Hawke\")\n",
+    "s1 = Student(\"Christine Carpenter\")\n",
     "print(s1.name)\n",
     "s2 = Student(\"Jörg Fliege\")\n",
     "s2.print_name()"
@@ -765,7 +765,7 @@
     }
    ],
    "source": [
-    "s1 = Student(\"Ian Hawke\")\n",
+    "s1 = Student(\"Christine Carpenter\")\n",
     "s2 = Student(\"Jörg Fliege\")\n",
     "print(s1)\n",
     "print(s2)"
@@ -812,7 +812,7 @@
     }
    ],
    "source": [
-    "s1 = Student(\"Ian Hawke\")\n",
+    "s1 = Student(\"Christine Carpenter\")\n",
     "s2 = Student(\"Jörg Fliege\")\n",
     "print(s1 + s2)"
    ]
@@ -950,6 +950,195 @@
    "source": [
     "problem = Linearprog([1, 1], [c1, c2])\n",
     "print(problem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using libraries - `pulp`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The main advantage of using Python is the range of libraries there are that you can use to more efficiently solve your problems. For linear programming there is the [`pulp` library](https://pythonhosted.org/PuLP/), which is a Python wrapper to efficient low level libraries such as GLPK.\n",
+    "\n",
+    "There are a [range of examples](https://pythonhosted.org/PuLP/CaseStudies/index.html) that you can look at, but we'll quickly revisit the example above. The approach is to use a lot of `pulp` defined classes, which are hopefully fairly transparent:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pulp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "problem = pulp.LpProblem(\"Simple problem\", pulp.LpMaximize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This gives a \"meaningful\" title to the problem and says if we're going to maximize or minimize."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x1 = pulp.LpVariable(\"x_1\", lowBound=0, upBound=None, cat='continuous')\n",
+    "x2 = pulp.LpVariable(\"x_2\", lowBound=0, upBound=None, cat='continuous')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining the variables again gives them \"meaningful\" names, and specifies their lower and upper bounds, and whether the variable type is `continuous` or `integer`. We could ignore the latter two definitions as they take their default values.\n",
+    "\n",
+    "The first thing to do now is to define the objective function by \"adding\" it to the problem:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objective = x1 + x2, \"Objective function to maximize\"\n",
+    "problem += objective"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again we have given a \"meaningful\" name to the objective function we're maximizing. \n",
+    "\n",
+    "Next we can create constraints and add them to the problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "c1 = 2 * x1 + x2 <= 4, \"First constraint\"\n",
+    "c2 = x1 + 2 * x2 <= 3, \"Second constraint\"\n",
+    "problem += c1\n",
+    "problem += c2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to save the problem at this stage, you can use `problem.writeLP(<filename>)`, where the `.lp` extension is normally used.\n",
+    "\n",
+    "To solve the problem, we just call"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "problem.solve()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "The `1` just means it *did it*: it does not say whether it succeeded! We need to print the status:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status: Optimal\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Status:\", pulp.LpStatus[problem.status])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As it's found a solution, we can print the objective function and the variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximized objective function =  2.33333337\n",
+      "x_1 = 1.6666667\n",
+      "x_2 = 0.66666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Maximized objective function = \", pulp.value(problem.objective))\n",
+    "for v in problem.variables():\n",
+    "    print(v.name, \"=\", v.varValue)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using `pulp` is far easier and robust than coding our own, and will cover a much wider range of problems."
    ]
   },
   {
