Add comments to address JF's points

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -546,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We read off the solution: $z = 7/3$ when $x_1 = 5/3$ and $x_2 = 2/3$:"
+    "We read off the solution (noting that floating point representations mean we need care interpreting the results): $z = 7/3$ when $x_1 = 5/3$ and $x_2 = 2/3$:"
    ]
   },
   {
@@ -963,7 +963,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The main advantage of using Python is the range of libraries there are that you can use to more efficiently solve your problems. For linear programming there is the [`pulp` library](https://pythonhosted.org/PuLP/), which is a Python wrapper to efficient low level libraries such as GLPK.\n",
+    "The main advantage of using Python is the range of libraries there are that you can use to more efficiently solve your problems. For linear programming there is the [`pulp` library](https://pythonhosted.org/PuLP/), which is a Python wrapper to efficient low level libraries such as GLPK. It's worth noting that `pulp` provides high-level access to leading proprietary libraries like CPLEX, but doesn't provide the binaries or the licences. By default `pulp` uses CBC which is considerably slower: consult your supervisor as to what's suitable when for your work.\n",
     "\n",
     "There are a [range of examples](https://pythonhosted.org/PuLP/CaseStudies/index.html) that you can look at, but we'll quickly revisit the example above. The approach is to use a lot of `pulp` defined classes, which are hopefully fairly transparent:"
    ]
