Start on scikit-learn

--- a/00-first-steps.ipynb
+++ b/00-first-steps.ipynb
@@ -163,6 +163,7 @@
     "* `pytest`\n",
     "* `numba`\n",
     "* `pandas`\n",
+    "* `scikit-learn`\n",
     "\n",
     "The command to install new packages is `conda install`. So, to install the packages above type (or copy and paste) first\n",
     "\n",
@@ -180,7 +181,7 @@
     "\n",
     "```bash\n",
     "conda install ipython numpy matplotlib scipy spyder pip \\\n",
-    " jupyter pytest numba pandas\n",
+    " jupyter pytest numba pandas scikit-learn\n",
     "```\n",
     "\n",
     "**Note**: the '`\\`' backslash character should continue an overly long line: if you are typing and not copying and pasting this should be unnecessary.\n",
