Rescaled to 16 bit data; still horrible

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -1584,7 +1584,8 @@
     "for im in all_images:\n",
     "    pyplot.figure()\n",
     "    pyplot.imshow(im)\n",
-    "    data.append(im.flatten())"
+    "    d = numpy.array(16 - (im - numpy.min(im)) / (numpy.max(im) - numpy.min(im)) * 16, dtype=int)\n",
+    "    data.append(d.flatten())"
    ]
   },
   {
