Add comments about installing pulp on Windows.

--- a/00-first-steps.ipynb
+++ b/00-first-steps.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "#### Terminals\n",
     "\n",
-    "A *terminal*, or a [*command prompt window*](http://windows.microsoft.com/en-gb/windows-vista/open-a-command-prompt-window), is a window where commands can be typed in to directly run commands or affect files. On Windows you select the `Command Prompt` from the Accessories menu. On Mac or Linux system you open a terminal or an XTerm. Inside the terminal you can change directories using the `cd` command, and run commands associated with Anaconda or miniconda using the `conda` command.\n",
+    "A *terminal*, or a [*command prompt window*](http://windows.microsoft.com/en-gb/windows-vista/open-a-command-prompt-window), is a window where commands can be typed in to directly run commands or affect files. On Windows you select the `Command Prompt` from the Accessories menu or the *Anaconda console* or *Anaconda terminal* if available. On Mac or Linux system you open a terminal or an XTerm. Inside the terminal you can change directories using the `cd` command, and run commands associated with Anaconda or miniconda using the `conda` command.\n",
     "\n",
     "#### Creating the environment\n",
     "\n",
@@ -186,13 +186,27 @@
     "\n",
     "**Note**: the '`\\`' backslash character should continue an overly long line: if you are typing and not copying and pasting this should be unnecessary.\n",
     "\n",
-    "This will download and install a lot of additional packages that are needed; just agree and continue.\n",
-    "\n",
+    "This will download and install a lot of additional packages that are needed; just agree and continue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  `pulp`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finally, there is one package (`pulp`) that is not (easily) available through `conda`. We install that using `pip`. In the terminal, type\n",
     "\n",
     "```bash\n",
     "pip install pulp\n",
-    "```"
+    "```\n",
+    "\n",
+    "**Note**: if doing this on Windows, it may be *necessary* to use the Anaconda console or terminal to do this."
    ]
   },
   {
