Add further pandas links.
This is for issue #5.

--- a/03-plotting-data.ipynb
+++ b/03-plotting-data.ipynb
@@ -1022,7 +1022,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dfs = {'indie': pandas.read_csv('spotify_data/indie.csv'), 'pop': pandas.read_csv('spotify_data/pop.csv'), \n",
@@ -3162,7 +3164,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data.set_index('id', inplace=True)"
@@ -3226,7 +3230,9 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data.to_csv('spotify_data/combined_data.csv')"
@@ -3573,6 +3579,13 @@
     "ax = data[data.genre == 'country'].plot.scatter('danceability', 'energy', c=colours[0], label='country', figsize=(10,10))\n",
     "data[data.genre == 'metal'].plot.scatter('danceability', 'energy', c=colours[1], marker='x', label='metal', ax=ax)\n",
     "data[data.genre == 'house'].plot.scatter('danceability', 'energy', c=colours[2], marker='+', label='house', ax=ax)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More information about `pandas` can be found in [the documentation](http://pandas.pydata.org/pandas-docs/stable/), or [in tutorials](https://github.com/fonnesbeck/ngcm_pandas_2017) or in [standard books](https://www.amazon.co.uk/Python-Data-Analysis-Wrangling-IPython/dp/1449319793)."
    ]
   },
   {
