Add some of the quick exercises.

--- a/02-loops-functions.ipynb
+++ b/02-loops-functions.ipynb
@@ -294,6 +294,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that, given an integer $n$, returns the $n^{\\text{th}}$ Fibonacci number $F_n = F_{n-1} + F_{n-2}$, where $F_1 = 1 = F_2$. Check that it works for $n = 1, 2, 5, 10$ ($F_5 = 5$ and $F_{10} = 55$)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Loops"
    ]
   },
@@ -776,6 +790,34 @@
    "source": [
     "for key, value in d1.items():\n",
     "    print(\"Key is\", key, \"value is\", value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a dictionary with the structure:\n",
+    "\n",
+    "```\n",
+    "d = {'first name' : ...,\n",
+    "     'last name'  : ...,\n",
+    "     'student ID' : ...,\n",
+    "     'project'    : ...}\n",
+    "```\n",
+    "\n",
+    "Fill it in with suitable values. Write two functions `f_name` and `f_project`. Each should take as input a dictionary.\n",
+    "\n",
+    "1. `f_name` should print \"My name is <`first name`> <`last name`>\"\n",
+    "2. `f_project` should print \"Student <`student ID`> is doing project <`project`>\"\n",
+    "\n",
+    "where <`X`> should fill in the appropriate value from the dictionary."
    ]
   },
   {
